--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,33 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-input {
-  font-size: 16px;
-}
-
-:root {
-  touch-action: pan-x pan-y;
-  height: 100%
-}
-
-input[type="color"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="email"],
-input[type="month"],
-input[type="number"],
-input[type="password"],
-input[type="search"],
-input[type="tel"],
-input[type="text"],
-input[type="time"],
-input[type="url"],
-input[type="week"],
+input,
 select:focus,
 textarea {
   font-size: 16px;
 }
+
 @layer base {
   :root {
     --background: 0 0% 100%;
